tests/specs/ecosystem/radix_ui_fork/react_roving_focus/0_0_5.test
radix-ui-fork/react-roving-focus/0.0.5
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLDivElement'.
const RovingFocusGroup: React.ForwardRefExoticComponent<Omit<RovingFocusGroupProps, "ref"> & React.RefAttributes<HTMLDivElement>> = {} as never;
                                                                                                                 ~~~~~~~~~~~~~~
    at file://<tmpdir>/src/RovingFocusGroup.tsx:24:114

TS2304 [ERROR]: Cannot find name 'HTMLSpanElement'.
const RovingFocusGroupItem: React.ForwardRefExoticComponent<RovingFocusItemProps & React.RefAttributes<HTMLSpanElement>> = {} as never;
                                                                                                       ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/RovingFocusGroup.tsx:39:104

Found 2 errors.

